added running tests parallely and in groups and sending data to test case using data provider object

--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,5 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.automation.SeleniumFramework.Test.StandaloneTest.orderHistory</td></tr>
+<tr><td>com.automation.SeleniumFramework.Test.NegativeScenarios.loginFail</td></tr>
+<tr><td>com.automation.SeleniumFramework.Test.NegativeScenarios.validateProductNameIncart</td></tr>
 </table>
