--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,11 +11,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginFail</td>
-<td>&nbsp;</td></tr>
+<td>submitOrder</td>
+<td>purchase </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
-<td>submitOrder</td>
+<td>orderHistory</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
