--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7e966a">  <td>24/09/16 21:21:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@738dc9b]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td>  <td>main@352598575</td>   <td></td> </tr>
-<tr bgcolor="7e966a">  <td>24/09/16 21:21:35</td>   <td>10076</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@738dc9b]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td>  <td>main@352598575</td>   <td></td> </tr>
-<tr bgcolor="a186a4">  <td>24/09/16 21:21:33</td>   <td>8298</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StandaloneTest.loginFail()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@738dc9b]">loginFail</td> 
-  <td>main@352598575</td>   <td></td> </tr>
-<tr bgcolor="a186a4">  <td>24/09/16 21:23:33</td>   <td>127826</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StandaloneTest.submitOrder()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@738dc9b]">submitOrder</td> 
-  <td>main@352598575</td>   <td></td> </tr>
-<tr bgcolor="7e966a">  <td>24/09/16 21:21:35</td>   <td>10001</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@738dc9b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@352598575</td>   <td></td> </tr>
+<tr bgcolor="7e966a">  <td>24/09/18 20:45:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@2892d68]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>main@1594138273</td>   <td></td> </tr>
+<tr bgcolor="a186a4">  <td>24/09/18 20:45:51</td>   <td>5009</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StandaloneTest.submitOrder(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@2892d68]">submitOrder</td> 
+  <td>main@1594138273</td>   <td></td> </tr>
+<tr bgcolor="7e966a">  <td>24/09/18 20:45:59</td>   <td>12179</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@2892d68]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1594138273</td>   <td></td> </tr>
 </table>
