--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,1 +1,3 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>purchase</td><td>StandaloneTest.submitOrder(java.util.HashMap)[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@46cdf8bd]<br/></td></tr>
+</table>
