--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,28 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7e966a">  <td>24/09/16 21:44:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@738dc9b]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td>  <td>main@903525611</td>   <td></td> </tr>
-<tr bgcolor="7e966a">  <td>24/09/16 21:44:52</td>   <td>5985</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@738dc9b]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td>  <td>main@903525611</td>   <td></td> </tr>
-<tr bgcolor="7e966a">  <td>24/09/16 21:45:14</td>   <td>27866</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:com.automation.SeleniumFramework.Test.NegativeScenarios@8f2ef19]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td>  <td>main@903525611</td>   <td></td> </tr>
-<tr bgcolor="7e966a">  <td>24/09/16 21:45:20</td>   <td>33303</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:com.automation.SeleniumFramework.Test.NegativeScenarios@8f2ef19]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td>  <td>main@903525611</td>   <td></td> </tr>
-<tr bgcolor="a186a4">  <td>24/09/16 21:44:52</td>   <td>5377</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StandaloneTest.loginFail()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@738dc9b]">loginFail</td> 
-  <td>main@903525611</td>   <td></td> </tr>
-<tr bgcolor="ae8e6e">  <td>24/09/16 21:45:19</td>   <td>32292</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NegativeScenarios.loginFail()[pri:0, instance:com.automation.SeleniumFramework.Test.NegativeScenarios@8f2ef19]">loginFail</td> 
-  <td>main@903525611</td>   <td></td> </tr>
-<tr bgcolor="a186a4">  <td>24/09/16 21:44:57</td>   <td>10292</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StandaloneTest.submitOrder()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@738dc9b]">submitOrder</td> 
-  <td>main@903525611</td>   <td></td> </tr>
-<tr bgcolor="ae8e6e">  <td>24/09/16 21:45:24</td>   <td>37168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NegativeScenarios.submitOrder()[pri:0, instance:com.automation.SeleniumFramework.Test.NegativeScenarios@8f2ef19]">submitOrder</td> 
-  <td>main@903525611</td>   <td></td> </tr>
-<tr bgcolor="7e966a">  <td>24/09/16 21:44:52</td>   <td>5866</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@738dc9b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@903525611</td>   <td></td> </tr>
-<tr bgcolor="7e966a">  <td>24/09/16 21:45:14</td>   <td>27614</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@738dc9b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@903525611</td>   <td></td> </tr>
-<tr bgcolor="7e966a">  <td>24/09/16 21:45:20</td>   <td>33231</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.automation.SeleniumFramework.Test.NegativeScenarios@8f2ef19]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@903525611</td>   <td></td> </tr>
-<tr bgcolor="7e966a">  <td>24/09/16 21:45:28</td>   <td>41474</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.automation.SeleniumFramework.Test.NegativeScenarios@8f2ef19]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@903525611</td>   <td></td> </tr>
+<tr bgcolor="af86ee">  <td>24/09/18 21:14:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@46cdf8bd]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>TestNG@1178418511</td>   <td></td> </tr>
+<tr bgcolor="d3eec0">  <td>24/09/18 21:14:43</td>   <td>4336</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StandaloneTest.submitOrder(java.util.HashMap)[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@46cdf8bd]">submitOrder</td> 
+  <td>TestNG@1178418511</td>   <td></td> </tr>
+<tr bgcolor="af86ee">  <td>24/09/18 21:14:47</td>   <td>8374</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@46cdf8bd]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG@1178418511</td>   <td></td> </tr>
 </table>
