--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>purchase</td><td>StandaloneTest.submitOrder(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@2892d68]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>purchase</td><td>StandaloneTest.submitOrder(java.util.HashMap)[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@2ddc9a9f]<br/></td></tr>
 </table>
