--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7e966a">  <td>24/09/18 20:45:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@2892d68]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td>  <td>main@1594138273</td>   <td></td> </tr>
-<tr bgcolor="a186a4">  <td>24/09/18 20:45:51</td>   <td>5009</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StandaloneTest.submitOrder(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@2892d68]">submitOrder</td> 
-  <td>main@1594138273</td>   <td></td> </tr>
-<tr bgcolor="7e966a">  <td>24/09/18 20:45:59</td>   <td>12179</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@2892d68]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1594138273</td>   <td></td> </tr>
+<tr bgcolor="7e966a">  <td>24/09/18 23:17:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@2ddc9a9f]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>main@405215542</td>   <td></td> </tr>
+<tr bgcolor="7e966a">  <td>24/09/18 23:17:40</td>   <td>8160</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@2ddc9a9f]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>main@405215542</td>   <td></td> </tr>
+<tr bgcolor="a186a4">  <td>24/09/18 23:17:44</td>   <td>12213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StandaloneTest.orderHistory()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@2ddc9a9f]">orderHistory</td> 
+  <td>main@405215542</td>   <td></td> </tr>
+<tr bgcolor="a186a4">  <td>24/09/18 23:17:36</td>   <td>4091</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StandaloneTest.submitOrder(java.util.HashMap)[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@2ddc9a9f]">submitOrder</td> 
+  <td>main@405215542</td>   <td></td> </tr>
+<tr bgcolor="7e966a">  <td>24/09/18 23:17:40</td>   <td>8046</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@2ddc9a9f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@405215542</td>   <td></td> </tr>
+<tr bgcolor="7e966a">  <td>24/09/18 23:17:45</td>   <td>12910</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@2ddc9a9f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@405215542</td>   <td></td> </tr>
 </table>
