--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,19 +4,19 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.automation.SeleniumFramework.Test.StandaloneTest</td>
+<td>com.automation.SeleniumFramework.Test.NegativeScenarios</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>orderHistory</td>
+<td>validateProductNameIncart</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>submitOrder</td>
-<td>purchase </td>
+<td>loginFail</td>
+<td>negativeCases </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
