--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7e966a">  <td>24/09/18 23:17:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@2ddc9a9f]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td>  <td>main@405215542</td>   <td></td> </tr>
-<tr bgcolor="a186a4">  <td>24/09/18 23:17:36</td>   <td>4091</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StandaloneTest.submitOrder(java.util.HashMap)[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@2ddc9a9f]">submitOrder</td> 
-  <td>main@405215542</td>   <td></td> </tr>
-<tr bgcolor="7e966a">  <td>24/09/18 23:17:40</td>   <td>8046</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@2ddc9a9f]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@405215542</td>   <td></td> </tr>
-<tr bgcolor="7e966a">  <td>24/09/18 23:17:40</td>   <td>8160</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@2ddc9a9f]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td>  <td>main@405215542</td>   <td></td> </tr>
-<tr bgcolor="a186a4">  <td>24/09/18 23:17:44</td>   <td>12213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StandaloneTest.orderHistory()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@2ddc9a9f]">orderHistory</td> 
-  <td>main@405215542</td>   <td></td> </tr>
-<tr bgcolor="7e966a">  <td>24/09/18 23:17:45</td>   <td>12910</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@2ddc9a9f]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@405215542</td>   <td></td> </tr>
+<tr bgcolor="9da26d">  <td>24/09/19 19:16:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:com.automation.SeleniumFramework.Test.NegativeScenarios@7526515b]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>main@1208442275</td>   <td></td> </tr>
+<tr bgcolor="8485b5">  <td>24/09/19 19:16:09</td>   <td>6127</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NegativeScenarios.loginFail()[pri:0, instance:com.automation.SeleniumFramework.Test.NegativeScenarios@7526515b]">loginFail</td> 
+  <td>main@1208442275</td>   <td></td> </tr>
+<tr bgcolor="9da26d">  <td>24/09/19 19:16:10</td>   <td>6609</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.automation.SeleniumFramework.Test.NegativeScenarios@7526515b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1208442275</td>   <td></td> </tr>
+<tr bgcolor="9da26d">  <td>24/09/19 19:16:10</td>   <td>6722</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:com.automation.SeleniumFramework.Test.NegativeScenarios@7526515b]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>main@1208442275</td>   <td></td> </tr>
+<tr bgcolor="8485b5">  <td>24/09/19 19:16:14</td>   <td>10847</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NegativeScenarios.loginFail()[pri:0, instance:com.automation.SeleniumFramework.Test.NegativeScenarios@7526515b]">loginFail</td> 
+  <td>main@1208442275</td>   <td></td> </tr>
+<tr bgcolor="9da26d">  <td>24/09/19 19:16:14</td>   <td>11312</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.automation.SeleniumFramework.Test.NegativeScenarios@7526515b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1208442275</td>   <td></td> </tr>
+<tr bgcolor="9da26d">  <td>24/09/19 19:16:14</td>   <td>11381</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:com.automation.SeleniumFramework.Test.NegativeScenarios@7526515b]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>main@1208442275</td>   <td></td> </tr>
+<tr bgcolor="8485b5">  <td>24/09/19 19:16:19</td>   <td>15642</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NegativeScenarios.validateProductNameIncart()[pri:0, instance:com.automation.SeleniumFramework.Test.NegativeScenarios@7526515b]">validateProductNameIncart</td> 
+  <td>main@1208442275</td>   <td></td> </tr>
+<tr bgcolor="9da26d">  <td>24/09/19 19:16:39</td>   <td>36296</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.automation.SeleniumFramework.Test.NegativeScenarios@7526515b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1208442275</td>   <td></td> </tr>
 </table>
