--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="af86ee">  <td>24/09/18 23:18:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@7526515b]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td>  <td>TestNG@186792469</td>   <td></td> </tr>
-<tr bgcolor="d3eec0">  <td>24/09/18 23:18:17</td>   <td>4089</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StandaloneTest.submitOrder(java.util.HashMap)[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@7526515b]">submitOrder</td> 
-  <td>TestNG@186792469</td>   <td></td> </tr>
-<tr bgcolor="af86ee">  <td>24/09/18 23:18:34</td>   <td>21558</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@7526515b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG@186792469</td>   <td></td> </tr>
+<tr bgcolor="b68d79">  <td>24/09/19 19:22:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@4716be8b]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>main@735085430</td>   <td></td> </tr>
+<tr bgcolor="b68d79">  <td>24/09/19 19:22:38</td>   <td>11438</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@4716be8b]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>main@735085430</td>   <td></td> </tr>
+<tr bgcolor="b68d79">  <td>24/09/19 19:22:46</td>   <td>19181</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:com.automation.SeleniumFramework.Test.NegativeScenarios@7a1a14a4]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>main@735085430</td>   <td></td> </tr>
+<tr bgcolor="b68d79">  <td>24/09/19 19:22:57</td>   <td>30351</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:com.automation.SeleniumFramework.Test.NegativeScenarios@7a1a14a4]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>main@735085430</td>   <td></td> </tr>
+<tr bgcolor="b68d79">  <td>24/09/19 19:23:04</td>   <td>36804</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:com.automation.SeleniumFramework.Test.NegativeScenarios@7a1a14a4]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>main@735085430</td>   <td></td> </tr>
+<tr bgcolor="c9d0d6">  <td>24/09/19 19:22:56</td>   <td>29281</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NegativeScenarios.loginFail()[pri:0, instance:com.automation.SeleniumFramework.Test.NegativeScenarios@7a1a14a4]">loginFail</td> 
+  <td>main@735085430</td>   <td></td> </tr>
+<tr bgcolor="c9d0d6">  <td>24/09/19 19:23:03</td>   <td>36002</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NegativeScenarios.loginFail()[pri:0, instance:com.automation.SeleniumFramework.Test.NegativeScenarios@7a1a14a4]">loginFail</td> 
+  <td>main@735085430</td>   <td></td> </tr>
+<tr bgcolor="e38960">  <td>24/09/19 19:22:45</td>   <td>18083</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StandaloneTest.orderHistory()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@4716be8b]">orderHistory</td> 
+  <td>main@735085430</td>   <td></td> </tr>
+<tr bgcolor="e38960">  <td>24/09/19 19:22:33</td>   <td>6682</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StandaloneTest.submitOrder(java.util.HashMap)[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@4716be8b]">submitOrder</td> 
+  <td>main@735085430</td>   <td></td> </tr>
+<tr bgcolor="b68d79">  <td>24/09/19 19:22:38</td>   <td>11326</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@4716be8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@735085430</td>   <td></td> </tr>
+<tr bgcolor="b68d79">  <td>24/09/19 19:22:46</td>   <td>18777</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.automation.SeleniumFramework.Test.StandaloneTest@4716be8b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@735085430</td>   <td></td> </tr>
+<tr bgcolor="b68d79">  <td>24/09/19 19:22:57</td>   <td>30242</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.automation.SeleniumFramework.Test.NegativeScenarios@7a1a14a4]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@735085430</td>   <td></td> </tr>
+<tr bgcolor="b68d79">  <td>24/09/19 19:23:04</td>   <td>36689</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.automation.SeleniumFramework.Test.NegativeScenarios@7a1a14a4]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@735085430</td>   <td></td> </tr>
+<tr bgcolor="b68d79">  <td>24/09/19 19:23:26</td>   <td>59048</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.automation.SeleniumFramework.Test.NegativeScenarios@7a1a14a4]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@735085430</td>   <td></td> </tr>
+<tr bgcolor="c9d0d6">  <td>24/09/19 19:23:09</td>   <td>42540</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NegativeScenarios.validateProductNameIncart()[pri:0, instance:com.automation.SeleniumFramework.Test.NegativeScenarios@7a1a14a4]">validateProductNameIncart</td> 
+  <td>main@735085430</td>   <td></td> </tr>
 </table>
